--- a/index.css
+++ b/index.css
@@ -9,9 +9,9 @@ html, body{
 .container {
     display:grid;
     grid-row-gap:10px;
-    grid-column-gap: 10px;
+    grid-column-gap: 40px;
     grid-template-columns: 1fr 12fr 1fr;
-    grid-template-rows: 7vh 93vh;
+    grid-template-rows: 10vh 90vh;
     grid-template-areas: "h h h"
                          ". m a"   
 }
@@ -93,3 +93,19 @@ aside i{
     font-size:45px;
     margin:10px;
 }
+
+.fixed-top {
+    display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+.fixed-right {
+    display: flex;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+  }
