--- a/index.css
+++ b/index.css
@@ -146,6 +146,19 @@ aside i{
 }
 
 .projecttech{
+
+    text-align: left;
     grid-area: tech;
-    padding-left:0;
+    padding-left:5px;
 }
+
+.projectlinks{
+    grid-area: link;
+    display:flex;
+    justify-content: space-around;
+}
+
+.test{
+    position: absolute;
+}
+
