--- a/index.css
+++ b/index.css
@@ -116,6 +116,7 @@ aside i{
     display:flex;
     flex-direction: row;
     flex-wrap:wrap;
+    align-items: center;
 }
 
 .project{
@@ -132,8 +133,10 @@ aside i{
     grid-template-rows: 1fr 6fr 3fr;
     grid-template-areas: ". title ."
                          "desc desc tech"
-                         "link link link"      
-}
+                         "link link link";
+                         
+    box-shadow: 0px 3px 1px rgba(203, 193, 193, 0.25);
+    }
 
 .projecttitle{
     grid-area: title;
@@ -158,7 +161,52 @@ aside i{
     justify-content: space-around;
 }
 
-.test{
-    position: absolute;
-}
 
+@media (max-width: 600px) 
+{
+  .project {
+    width: 250px;
+    height: 250px;
+    grid-column-gap: 10px;
+    grid-row-gap: 5px;
+    font-size: 0.5em;
+   }
+
+   .projecttitle{
+       font-size:3em;
+       margin:5px;
+   }
+
+   .sourcebutton{
+       width: 40px;
+       margin: 0px;
+   }
+
+   .fab,.fas{
+       font-size: 2em;
+   }
+
+   h2.item{
+       font-size:3em;
+   }
+
+   .projecttech{
+       font-size:1.1em;
+   }
+
+   .item{
+       margin-left:5px;
+   }
+   .box{
+       justify-content: center;
+   }
+   .container{
+        grid-template-areas: "h h h"
+                             "m m a"
+   }
+
+   p.item{
+       font-size:1em;
+       margin-left:8px;
+   }
+}
