--- a/index.css
+++ b/index.css
@@ -129,8 +129,8 @@ aside i{
     display:grid;
     grid-row-gap:10px;
     grid-column-gap: 40px;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 6fr 3fr;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-rows: 20% 50% 30%;
     grid-template-areas: ". title ."
                          "desc desc tech"
                          "link link link";
@@ -141,6 +141,11 @@ aside i{
 .projecttitle{
     grid-area: title;
     font-size: 30px;
+    display:flex;
+    flex-direction: column;
+    align-content: flex-start;
+    margin:0;
+    margin-top:5px;
 }
 
 .projectdesc{
@@ -149,7 +154,6 @@ aside i{
 }
 
 .projecttech{
-
     text-align: left;
     grid-area: tech;
     padding-left:5px;
@@ -159,6 +163,7 @@ aside i{
     grid-area: link;
     display:flex;
     justify-content: space-around;
+    margin-bottom: 0;
 }
 
 
